feat(iam): Add sign-up and sign-in features.
This commit adds the sign-up and sign-in models to the `iam/model` directory. The `sign-up.request.ts` file contains the `SignUpRequest` class with properties for username and password. The `sign-up.response.ts` file contains the `SignUpResponse` class with properties for id and username. The `sign-in.request.ts` file contains the `SignInRequest` class with properties for username and password. The `sign-in.response.ts` file contains the `SignInResponse` class with properties for id, username, and token.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-@if (isAuth == true) {
-<app-header></app-header>
-} @else {
+<!-- @if (isAuth == true) { -->
+<app-header />
+<!-- } @else {
 <app-auth-page></app-auth-page>
-}
+} -->
