--- a/src/app/pockets/pages/home/home.component.html
+++ b/src/app/pockets/pages/home/home.component.html
@@ -2,25 +2,25 @@
   <mat-card class="welcome-card">
     <mat-card-header>
       <div mat-card-avatar class="welcome-image">
-        <img [src]="partner?.photo" alt="User Photo">
+        <img [src]="partner.photo" alt="User Photo">
       </div>
-      <mat-card-title class="else">Welcome Back {{ partner?.fullName }}</mat-card-title>
-      <mat-card-subtitle style="margin-left: 30px;">{{ partner?.email }}</mat-card-subtitle>
+      <mat-card-title class="else">Welcome Back {{ currentUsername }}</mat-card-title>
+      <mat-card-subtitle style="margin-left: 30px;">{{ partner.email }}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <p style="margin-left: 85px;">¡Hi! We hope you have a nice day.</p>
     </mat-card-content>
   </mat-card>
 
-    <mat-card class="currency-card">
-      <mat-card-header>
-        <mat-card-title class="currency-card-title">Currency</mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <div class="currency-image"></div>
-      </mat-card-content>
-    </mat-card>
-  </div>
+  <mat-card class="currency-card">
+    <mat-card-header>
+      <mat-card-title class="currency-card-title">Currency</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <div class="currency-image"></div>
+    </mat-card-content>
+  </mat-card>
+</div>
 
 
 <div class="container">
