--- a/src/app/iam/pages/sign-up/sign-up.component.html
+++ b/src/app/iam/pages/sign-up/sign-up.component.html
@@ -14,6 +14,33 @@
             formControlName="password">
           <mat-error *ngIf="isInvalidControl(form,'password')">{{ errorMessagesForControl(form,'password')}}</mat-error>
         </mat-form-field>
+        <mat-form-field>
+          <input matInput type="text" placeholder="Your First Name" id="firstName" name="firstName" required
+            formControlName="firstName">
+          <mat-error *ngIf="isInvalidControl(form,'firstName')">{{
+            errorMessagesForControl(form,'fullName')}}</mat-error>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput type="text" placeholder="Your fullName" id="lastName" name="lastName" required
+            formControlName="lastName">
+          <mat-error *ngIf="isInvalidControl(form,'lastName')">{{ errorMessagesForControl(form,'fullName')}}</mat-error>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput type="email" placeholder="Your Email" name="email" id="email" required
+            formControlName="email">
+          <mat-error *ngIf="isInvalidControl(form,'email')">{{
+            errorMessagesForControl(form,'email')}}</mat-error>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput type="tel" placeholder="Phone Number" name="phoneNumber" id="phoneNumber" required
+            formControlName="phoneNumber">
+          <mat-error *ngIf="isInvalidControl(form,'phoneNumber')">{{
+            errorMessagesForControl(form,'phoneNumber')}}</mat-error>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput type="text" placeholder="Photo" name="photo" id="photo" required formControlName="photo">
+          <mat-error *ngIf="isInvalidControl(form,'photo')">{{ errorMessagesForControl(form,'photo')}}</mat-error>
+        </mat-form-field>
         <button mat-raised-button color="primary">Sign Up</button>
       </form>
     </mat-card-content>
