feat: Update app component to handle user authentication
The code changes in the `app.component.html` file update the conditional rendering logic to display the header component when the user is authenticated and the router outlet when the user is not authenticated. This improves the user experience by showing the appropriate content based on the user's authentication status.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<!-- @if (isAuth == true) { -->
+@if (isAuth == true) {
 <app-header />
-<!-- } @else {
-<app-auth-page></app-auth-page>
-} -->
+} @else {
+<router-outlet></router-outlet>
+}
