--- a/src/app/iam/pages/sign-in/sign-in.component.html
+++ b/src/app/iam/pages/sign-in/sign-in.component.html
@@ -17,5 +17,6 @@
         <button mat-raised-button color="primary">Sign In</button>
       </form>
     </mat-card-content>
+    <a mat-button [routerLink]="['/sign-up']">Sign Up</a>
   </mat-card>
 </div>
