--- a/src/app/iam/pages/sign-up/sign-up.component.html
+++ b/src/app/iam/pages/sign-up/sign-up.component.html
@@ -44,5 +44,6 @@
         <button mat-raised-button color="primary">Sign Up</button>
       </form>
     </mat-card-content>
+    <a mat-button [routerLink]="['/sign-in']">Sign In</a>
   </mat-card>
 </div>
