--- a/src/app/expenses/pages/add-expense/add-expense.component.html
+++ b/src/app/expenses/pages/add-expense/add-expense.component.html
@@ -2,6 +2,5 @@
   <h1 class="title">
     Add New Expense
   </h1>
-  <app-form-expense (onAddExpense)="onSubmit($event)" [user]="user" />
+  <app-form-expense (onAddExpense)="onSubmit($event)" [user]="user" [joinedGroups]="joinedGroups" />
 </div>
-
