--- a/src/app/group/pages/page-group-details/page-group-details.component.html
+++ b/src/app/group/pages/page-group-details/page-group-details.component.html
@@ -9,7 +9,7 @@
             @if (amountOfPayToYou > 0) {
             te debe: {{ amountOfPayToYou }}
             } @else if (amountOfPayToYou < 0) { le debes: {{ amountOfPayToYou*-1 }} } @else { Estas al dia }
-              @if(group.currency[0].code=='PEN' ){ Soles } @else { {{ group.currency[0].code }} } </mat-card-title>
+              @if(group.currency[0]?.code=='PEN' ){ Soles } @else { {{ group.currency[0]?.code }} } </mat-card-title>
         </mat-card-title-group>
       </mat-card-header>
       <mat-card-content>
