feat(group details): now you can select a name to pay a expense
The code changes in the `page-group-details.component.html` and `page-group-details.component.ts` files update the component to use the `groupMembers` property instead of `group.members`. This change improves the consistency and readability of the code.

--- a/src/app/group/pages/page-group-details/page-group-details.component.html
+++ b/src/app/group/pages/page-group-details/page-group-details.component.html
@@ -22,12 +22,12 @@
     <mat-card>
       <mat-card-title>Cada miembro debe pagar</mat-card-title>
       <mat-card-content>
-        <div *ngFor="let member of group.members">
-          <label [class.checked]="isMemberPaid(member.id)">
-            <input type="checkbox" [checked]="isMemberPaid(member.id)" (change)="togglePaidMember(member.id)">
-            <span>{{ member.name }}</span>
+        <div *ngFor="let member of groupMembers">
+          <label [class.checked]="isMemberPaid(member.userId)">
+            <input type="checkbox" [checked]="isMemberPaid(member.userId)" (change)="togglePaidMember(member.userId)">
+            <span>{{ member.fullName }}</span>
           </label>
-          <span class="amount">{{ amountEachMemberShouldPay }} {{ group.currency }}</span>
+          <span class="amount">{{ amountEachMemberShouldPay }} {{ group.currency[0]?.code }}</span>
         </div>
       </mat-card-content>
     </mat-card>
