fix(group details): fix a reading code of currency during the init phase.

--- a/src/app/group/pages/page-group-details/page-group-details.component.html
+++ b/src/app/group/pages/page-group-details/page-group-details.component.html
@@ -9,14 +9,13 @@
             @if (amountOfPayToYou > 0) {
             te debe: {{ amountOfPayToYou }}
             } @else if (amountOfPayToYou < 0) { le debes: {{ amountOfPayToYou*-1 }} } @else { Estas al dia }
-              @if(group.currency[0].code || null=='PEN' ){ Soles } @else { {{ group.currency[0].code || null }} }
-              </mat-card-title>
+              @if(currentCurrency=='PEN' ){ Soles } @else { {{ currentCurrency }} } </mat-card-title>
         </mat-card-title-group>
       </mat-card-header>
       <mat-card-content>
         <p>Creación: {{ group.createdAt | date: 'dd/MM/yyyy'}}</p>
         <p *ngFor="let currency of group.currency">Currency: {{ currency.code }}</p>
-        <p>Integrantes: {{ groupMembers.length }}</p>
+        <p>Integrantes: {{ totalOfMembers }}</p>
       </mat-card-content>
     </mat-card>
 
