--- a/src/app/group/components/form-create-group/form-create-group.component.html
+++ b/src/app/group/components/form-create-group/form-create-group.component.html
@@ -26,7 +26,7 @@
         <mat-label>Contactos</mat-label>
         <mat-select formControlName="firstCtrl" multiple>
           @for (member of groupMembersList; track member) {
-          <mat-option [value]="member">{{member}}</mat-option>
+          <mat-option [value]="member.id">{{member.name}}</mat-option>
           }
         </mat-select>
       </mat-form-field>
