--- a/src/app/iam/pages/sign-in/sign-in.component.html
+++ b/src/app/iam/pages/sign-in/sign-in.component.html
@@ -1,22 +1,38 @@
 <div class="sign-in-content">
-  <mat-card>
+  <mat-card class="mat-card">
     <mat-card-header>
-      <mat-card-title>Sign In</mat-card-title>
+      <mat-card-title style="color: #000000;">¡Bienvenido de vuelta!</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <form [formGroup]="form" (submit)="onSubmit()">
-        <mat-form-field>
-          <input matInput placeholder="Username" id="username" name="username" required formControlName="username">
-          <mat-error *ngIf="isInvalidControl(form,'username')">{{ errorMessagesForControl(form,'username')}}</mat-error>
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput type="password" placeholder="Password" id="password" name="password" required
-            formControlName="password">
-          <mat-error *ngIf="isInvalidControl(form,'password')">{{ errorMessagesForControl(form,'password')}}</mat-error>
-        </mat-form-field>
-        <button mat-raised-button color="primary">Sign In</button>
+        <div class="form-group">
+          <label style="color: #9c27b0;">¿Qué gastos harás hoy?</label>
+        </div>
+        <div class="form-group">
+          <mat-form-field>
+            <input matInput placeholder="Coloca tu e-mail o nombre de usuario" id="username" name="username" required formControlName="username">
+            <mat-error *ngIf="isInvalidControl(form,'username')">{{ errorMessagesForControl(form,'username')}}</mat-error>
+          </mat-form-field>
+        </div>
+        <div class="form-group">
+          <mat-form-field>
+            <input matInput type="password" placeholder="Coloca tu contraseña" id="password" name="password" required formControlName="password">
+            <mat-error *ngIf="isInvalidControl(form,'password')">{{ errorMessagesForControl(form,'password')}}</mat-error>
+          </mat-form-field>
+          <div style="text-align: right; margin-top: 5px;">
+            <a mat-button style="color: #9c27b0;" [routerLink]="['/forgot-password']">¿Olvidaste tu contraseña?</a>
+          </div>
+        </div>
+        <div class="form-group">
+          <button mat-raised-button color="primary" style="background-color: #9c27b0; color: #ffffff; width: 100%;">Iniciar sesión</button>
+        </div>
+        <div class="form-group" style="text-align: center;">
+          <label style="color: #9c27b0;">¿O usa otra de tus cuentas?</label>
+        </div>
+        <div class="form-group" style="text-align: center;">
+          <a mat-button style="color: orange;" [routerLink]="['/sign-up']">¿Aún no tienes una cuenta? Regístrate</a>
+        </div>
       </form>
     </mat-card-content>
-    <a mat-button [routerLink]="['/sign-up']">Sign Up</a>
   </mat-card>
 </div>
