--- a/src/app/iam/pages/sign-in/sign-in.component.html
+++ b/src/app/iam/pages/sign-in/sign-in.component.html
@@ -1,4 +1,7 @@
 <div class="sign-in-content">
+  <div class="image-wrapper">
+    <img src="assets/images/welcome.png" alt="Imagen de fondo" class="side-image">
+  </div>
   <mat-card class="mat-card">
     <mat-card-header>
       <mat-card-title style="color: #000000;">¡Bienvenido de vuelta!</mat-card-title>
@@ -6,7 +9,7 @@
     <mat-card-content>
       <form [formGroup]="form" (submit)="onSubmit()">
         <div class="form-group">
-          <label style="color: #9c27b0;">¿Qué gastos harás hoy?</label>
+          <label style="color: #aa67f2;">¿Qué gastos harás hoy?</label>
         </div>
         <div class="form-group">
           <mat-form-field>
@@ -20,17 +23,22 @@
             <mat-error *ngIf="isInvalidControl(form,'password')">{{ errorMessagesForControl(form,'password')}}</mat-error>
           </mat-form-field>
           <div style="text-align: right; margin-top: 5px;">
-            <a mat-button style="color: #9c27b0;" [routerLink]="['/forgot-password']">¿Olvidaste tu contraseña?</a>
+            <a mat-button style="color: #c682ff;" [routerLink]="['/forgot-password']">¿Olvidaste tu contraseña?</a>
           </div>
         </div>
         <div class="form-group">
-          <button mat-raised-button color="primary" style="background-color: #9c27b0; color: #ffffff; width: 100%;">Iniciar sesión</button>
+          <button mat-raised-button color="primary" style="background-color: #aa67f2; color: #ffffff; width: 100%;">Iniciar sesión</button>
         </div>
         <div class="form-group" style="text-align: center;">
-          <label style="color: #9c27b0;">¿O usa otra de tus cuentas?</label>
+          <label style="color: #000000;">¿O usa otra de tus cuentas?</label>
+        </div>
+        <div class="social-icons">
+          <a href="#" class="social-icon"><img src="assets/images/imgGoogleAccess.png" alt="Google"></a>
+          <a href="#" class="social-icon"><img src="assets/images/imgFacebookAccess.png" alt="Facebook"></a>
+          <a href="#" class="social-icon"><img src="assets/images/imgAppleAccess.png" alt="Twitter"></a>
         </div>
         <div class="form-group" style="text-align: center;">
-          <a mat-button style="color: orange;" [routerLink]="['/sign-up']">¿Aún no tienes una cuenta? Regístrate</a>
+          <a mat-button style="color: #000000;" [routerLink]="['/sign-up']">¿Aún no tienes una cuenta? Regístrate</a>
         </div>
       </form>
     </mat-card-content>
