--- a/src/app/iam/pages/sign-up/sign-up.component.html
+++ b/src/app/iam/pages/sign-up/sign-up.component.html
@@ -48,10 +48,10 @@
           </mat-form-field>
         </div>
         <div class="form-group">
-          <button mat-raised-button color="primary" style="background-color: #9c27b0; color: #ffffff; width: 100%;">Sign Up</button>
+          <button mat-raised-button color="primary" style="background-color: #9c27b0; color: #ffffff; width: 100%;">Registrarse</button>
         </div>
         <div class="form-group" style="text-align: center;">
-          <label style="color: #9c27b0;">Or use another account</label>
+          <label style="color: #9c27b0;">¿O registrate con una cuenta existente?</label>
         </div>
         <div class="social-icons">
           <a href="#" class="social-icon"><img src="assets/images/imgGoogleAccess.png" alt="Google"></a>
