fic(signUp): Register Style

--- a/src/app/iam/pages/sign-up/sign-up.component.html
+++ b/src/app/iam/pages/sign-up/sign-up.component.html
@@ -48,10 +48,10 @@
           </mat-form-field>
         </div>
         <div class="form-group">
-          <button mat-raised-button color="primary" style="background-color: #9c27b0; color: #ffffff; width: 100%;">Registrarse</button>
+          <button mat-raised-button color="primary" style="background-color: #aa67f2; color: #ffffff; width: 100%;">Registrarse</button>
         </div>
         <div class="form-group" style="text-align: center;">
-          <label style="color: #9c27b0;">¿O registrate con una cuenta existente?</label>
+          <label style="color: #aa67f2;">¿O registrate con una cuenta existente?</label>
         </div>
         <div class="social-icons">
           <a href="#" class="social-icon"><img src="assets/images/imgGoogleAccess.png" alt="Google"></a>
@@ -59,7 +59,7 @@
           <a href="#" class="social-icon"><img src="assets/images/imgAppleAccess.png" alt="Twitter"></a>
         </div>
         <div class="form-group" style="text-align: center;">
-          <a mat-button style="color: orange;" [routerLink]="['/sign-in']">¿Ya tienes una cuenta? Inicia Sesión</a>
+          <a mat-button style="color: #000000;" [routerLink]="['/sign-in']">¿Ya tienes una cuenta? Inicia Sesión</a>
         </div>
       </form>
     </mat-card-content>
