fix(add expense): fix the creation flow in add expenses now can add a expense normally
expense.component.html` file update the `mat-option` element to bind the `group.id` property instead of `group.groupId`. This change ensures that the correct group ID is selected when picking a group in the expense form.

--- a/src/app/group/components/form-create-group/form-create-group.component.html
+++ b/src/app/group/components/form-create-group/form-create-group.component.html
@@ -17,7 +17,7 @@
       </div>
     </form>
   </mat-step>
-  <mat-step [stepControl]="secondFormGroup">
+  <!--   <mat-step [stepControl]="secondFormGroup">
     <form [formGroup]="secondFormGroup">
       <ng-template matStepLabel>
         Group Members
@@ -35,7 +35,7 @@
         <button mat-button matStepperNext>Next</button>
       </div>
     </form>
-  </mat-step>
+  </mat-step> -->
   <mat-step [stepControl]="thirdFormGroup">
     <form [formGroup]="thirdFormGroup">
       <ng-template matStepLabel>
