--- a/src/app/expenses/components/form-expense/form-expense.component.html
+++ b/src/app/expenses/components/form-expense/form-expense.component.html
@@ -51,7 +51,7 @@
       <mat-form-field>
         <mat-label>Pick a group</mat-label>
         <mat-select formControlName="firstCtrl" required>
-          <mat-option *ngFor="let group of joinedGroups" [value]="group.groupId">
+          <mat-option *ngFor="let group of joinedGroups" [value]="group.id">
             {{ group.name }}
           </mat-option>
         </mat-select>
