--- a/src/app/payments/incoming/pages/add-payment/add-payment.component.html
+++ b/src/app/payments/incoming/pages/add-payment/add-payment.component.html
@@ -1,6 +1,6 @@
 <div class="new-payment">
   <h1 class="title">
-    Add New Expense
+    Add New Payment
   </h1>
   <app-form-payment (onAddPayment)="onSubmit($event)" [user]="user" />
 </div>
