--- a/src/app/payments/outgoing/pages/outgoing.component.html
+++ b/src/app/payments/outgoing/pages/outgoing.component.html
@@ -16,7 +16,7 @@
               <mat-card-title>{{ group.name }}</mat-card-title>
             </mat-card-title-group>
           </mat-card-header>
-
+          @if (groupPayments[group.id]) {
           <mat-card-content>
             <div class="container">
               <div class="box name">
@@ -39,6 +39,12 @@
               </div>
             </div>
           </mat-card-content>
+          }
+          @else {
+          <mat-card-content>
+            Todavía no hay movimientos...
+          </mat-card-content>
+          }
         </mat-card>
       </div>
     </mat-card-content>
@@ -58,7 +64,7 @@
               <mat-card-title>{{ group.name }}</mat-card-title>
             </mat-card-title-group>
           </mat-card-header>
-
+          @if (groupPayments[group.id]) {
           <mat-card-content>
             <div class="container">
               <div class="box name">
@@ -81,6 +87,12 @@
               </div>
             </div>
           </mat-card-content>
+          }
+          @else {
+          <mat-card-content>
+            Todavía no hay movimientos...
+          </mat-card-content>
+          }
         </mat-card>
       </div>
     </mat-card-content>
