--- a/src/app/payments/incoming/pages/incoming.component.html
+++ b/src/app/payments/incoming/pages/incoming.component.html
@@ -1,3 +1,4 @@
+@if (dataLoaded | async) {
 <div class="title-container">
   <h1>Incoming Payments</h1>
 </div>
@@ -38,3 +39,9 @@
   </mat-card-content>
   }
 </mat-card>
+}
+@else {
+<div class="loading-container">
+  <mat-spinner></mat-spinner>
+</div>
+}
