--- a/src/app/payments/outgoing/pages/outgoing.component.css
+++ b/src/app/payments/outgoing/pages/outgoing.component.css
@@ -6,6 +6,19 @@
   margin-top: 20px;
 }
 
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  background-color: #ffffff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
 .title-container h1 {
   display: inline-block;
   padding: 10px 20px;
@@ -61,7 +74,8 @@
   text-align: left;
 }
 
-.box h3, .box h4 {
+.box h3,
+.box h4 {
   font-family: 'Roboto', sans-serif;
   color: #333;
 }
