feat(group detail): Add loading spinner and data check in page-group component

--- a/src/app/group/pages/page-group/page-group.component.css
+++ b/src/app/group/pages/page-group/page-group.component.css
@@ -9,6 +9,19 @@
   font-size: 2rem;
 }
 
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  background-color: #ffffff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
 .groups-container {
   display: flex;
   flex-wrap: wrap;
