--- a/src/app/payments/outgoing/pages/outgoing.component.html
+++ b/src/app/payments/outgoing/pages/outgoing.component.html
@@ -1,4 +1,4 @@
-@if (dataLoaded | async) {
+<!-- @if (dataLoaded | async) { -->
 <div class="title-container">
   <h1>Outgoing Payments</h1>
 </div>
@@ -99,9 +99,9 @@
     </mat-card-content>
   </mat-card>
 </div>
-}
-@else {
-<div class="loading-container">
+<!-- }
+@else { -->
+<!-- <div class="loading-container">
   <mat-spinner></mat-spinner>
-</div>
-}
+</div> -->
+<!-- } -->
