fix(incoming outgoing): fixed a bug that caused an infinite load if there was no data in the database

--- a/src/app/payments/incoming/pages/incoming.component.html
+++ b/src/app/payments/incoming/pages/incoming.component.html
@@ -1,4 +1,4 @@
-<!-- @if (dataLoaded | async) { -->
+@if (dataLoaded | async) {
 <div class="title-container">
   <h1>Incoming Payments</h1>
 </div>
@@ -39,9 +39,9 @@
   </mat-card-content>
   }
 </mat-card>
-<!-- }
-@else { -->
-<!-- <div class="loading-container">
+}
+@else {
+<div class="loading-container">
   <mat-spinner></mat-spinner>
-</div> -->
-<!-- } -->
+</div>
+}
