fix(outgoing):  completed payment

--- a/src/app/payments/components/form-payment/form-payment.component.html
+++ b/src/app/payments/components/form-payment/form-payment.component.html
@@ -1,27 +1,27 @@
 <mat-stepper #stepper>
-<mat-step [stepControl]="firstFormGroup">
+  <mat-step [stepControl]="firstFormGroup">
     <form [formGroup]="firstFormGroup">
-        <ng-template matStepLabel>
-            Which Group?
-        </ng-template>
+      <ng-template matStepLabel>
+        Which Group?
+      </ng-template>
       <mat-form-field>
         <mat-label>Pick a group</mat-label>
-        <mat-select formControlName="firstCtrl" required>
-          <mat-option *ngFor="let group of joinedGroups " [value]="group.id">
+        <mat-select formControlName="firstCtrl" required (selectionChange)="onGroupSelectionChange($event)">
+          <mat-option *ngFor="let group of joinedGroups" [value]="group.id">
             {{ group.name }}
           </mat-option>
         </mat-select>
       </mat-form-field>
-        <div>
-            <button mat-button matStepperNext>Next</button>
-        </div>
+      <div>
+        <button mat-button matStepperNext>Next</button>
+      </div>
     </form>
-</mat-step>
-<mat-step [stepControl]="secondFormGroup">
+  </mat-step>
+  <mat-step [stepControl]="secondFormGroup">
     <form [formGroup]="secondFormGroup">
-        <ng-template matStepLabel>
-            Which Expense?
-        </ng-template>
+      <ng-template matStepLabel>
+        Which Expense?
+      </ng-template>
       <mat-form-field>
         <mat-label>Pick an expense</mat-label>
         <mat-select formControlName="firstCtrl" required>
@@ -30,41 +30,24 @@
           </mat-option>
         </mat-select>
       </mat-form-field>
-        <div>
-            <button mat-button matStepperPrevious>Back</button>
-            <button mat-button matStepperNext>Next</button>
-        </div>
+      <div>
+        <button mat-button matStepperPrevious>Back</button>
+        <button mat-button matStepperNext>Next</button>
+      </div>
     </form>
-</mat-step>
-<mat-step [stepControl]="thirdFormGroup">
-    <form [formGroup]="thirdFormGroup">
-        <ng-template matStepLabel>
-            How much?
-        </ng-template>
-        <mat-form-field>
-            <mat-label>Set the amount</mat-label>
-            <input type="number" matInput formControlName="firstCtrl" required>
-        </mat-form-field>
-        <div>
-            <button mat-button matStepperPrevious>Back</button>
-            <button mat-button matStepperNext>Next</button>
-        </div>
-    </form>
-</mat-step>
-<mat-step>
+  </mat-step>
+  <mat-step>
     <ng-template matStepLabel>
-        Summary
+      Summary
     </ng-template>
     <div>
-        <h1>Summary</h1>
-        <p>Group: {{ firstFormGroup.value.firstCtrl }}</p>
-        <p>Expense: {{ secondFormGroup.value.firstCtrl }}</p>
-        <p>Amount: {{ thirdFormGroup.value.firstCtrl }}</p>
-        <p>Group: {{ fourthFormGroup.value.firstCtrl }}</p>
+      <h1>Summary</h1>
+      <p>Group: {{ firstFormGroup.value.firstCtrl }}</p>
+      <p>Expense: {{ secondFormGroup.value.firstCtrl }}</p>
     </div>
     <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button (click)="onSubmit()">Submit</button>
+      <button mat-button matStepperPrevious>Back</button>
+      <button mat-button (click)="onSubmit()">Submit</button>
     </div>
-</mat-step>
+  </mat-step>
 </mat-stepper>
